--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Treedbox Atom JavaScript",
+  "name": "treedbox-atom-javascript",
   "main": "./lib/treedbox-atom-javascript",
   "version": "0.0.0",
   "description": "javaScript Snippets for fast development in Atom.io.",
